--- a/blog/_posts/2015-12-30-2015.md
+++ b/blog/_posts/2015-12-30-2015.md
@@ -26,7 +26,7 @@ According to [Spotify Year in Music](https://yearinmusic.spotify.com/en-US) I sp
 
 
 ## Books
-I discovered a lot of great books this year and even read some of them. My books wish list on Amazon is now officially out of control, there are just too many good books to read. I will either have to come up with some sort of prioritization system or retire and start reading full time. Anyway, here's the list of top 5 books, that I read this year, with a couple of quotes:
+I discovered a lot of great books this year and even [read some of them](/books). My books wish list on Amazon is now officially out of control, there are just too many good books to read. I will either have to come up with some sort of prioritization system or retire and start reading full time. Anyway, here's the list of top 5 books, that I read this year, with a couple of quotes:
 
 ### [The Innovators, Walter Isaacson](http://www.amazon.com/Innovators-Hackers-Geniuses-Created-Revolution-ebook/dp/B00JGAS65Q/){:target="_blank"}
 - Sometimes the difference between geniuses and jerks hinges on whether their ideas turn out to be right.
