--- a/blog/_posts/2015-12-30-2015.md
+++ b/blog/_posts/2015-12-30-2015.md
@@ -78,7 +78,7 @@ I spend a lot of time sitting in front of the computer, so naturally, I read a l
 - [Obvious advice](http://mindingourway.com/obvious-advice/){:target="_blank"}
 - [How to Be Alone: An Antidote to One of the Central Anxieties and Greatest Paradoxes of Our Time](https://www.brainpickings.org/2014/09/03/how-to-be-alone-school-of-life/){:target="_blank"}
 - [The Shortness of Life: Seneca on Busyness and the Art of Living Wide Rather Than Living Long](https://www.brainpickings.org/2014/09/01/seneca-on-the-shortness-of-life/){:target="_blank"}
-- [The Farmi Paradox](http://waitbutwhy.com/2014/05/fermi-paradox.html){:target="_blank"}
+- [The Fermi Paradox](http://waitbutwhy.com/2014/05/fermi-paradox.html){:target="_blank"}
 - [1000 true fans](http://kk.org/thetechnium/1000-true-fans/){:target="_blank"}
 - [The Crossroads of Should and Must](https://medium.com/@elleluna/the-crossroads-of-should-and-must-90c75eb7c5b0#.q6iavb1gm){:target="_blank"}
 
