--- a/blog/_posts/2016-04-15-sprint.md
+++ b/blog/_posts/2016-04-15-sprint.md
@@ -6,7 +6,7 @@ category: book
 
 book_notes: false
 book_title: "Sprint: How to Solve Big Problems and Test New Ideas in Just Five Days"
-book_author: "Jake Knapp, John Zeratsky, Braden Kowitz"
+book_author: "J. Knapp, J. Zeratsky, B. Kowitz"
 book_rating: 7
 book_link: "http://www.amazon.com/Sprint-Solve-Problems-Test-Ideas/dp/150112174X"
 book_read_year: 2016
