--- a/blog/_posts/2016-01-30-sapiens.md
+++ b/blog/_posts/2016-01-30-sapiens.md
@@ -15,7 +15,7 @@ book_image: "sapiens.jpg"
 
 Three important revolutions shaped the course of history: *the Cognitive Revolution* kick-started history about 70,000 years ago. *The Agricultural Revolution* sped it up about 12,000 years ago. *The Scientific Revolution*, which got under way only 500 years ago, may well end history and start something completely different. This book tells the story of how these three revolutions have affected humans and their fellow organisms. 
 
-## The Cognitive Revolution
+#### The Cognitive Revolution
 
 - Just 6 million years ago, a single female ape had 2 daughters. One became the ancestor of all chimpanzees, the other is our own grandmother.
 - Humans first evolved in East Africa about 2.5 million years ago from an earlier genus of apes called Australopithecus, which means “Southern Ape”.
@@ -29,7 +29,7 @@ Three important revolutions shaped the course of history: *the Cognitive Revolut
 - Ever since the Cognitive Revolution, Sapiens have thus been living in a dual reality. On the one hand, the objective reality of rivers, trees and lions; and on the other hand, the imagined reality of gods, nations and corporations. 
 - Since large-scale human cooperation is based on myths, the way people cooperate can be altered by changing the myths — by telling different stories. …ever since the Cognitive Revolution, Homo sapiens has been able to review its behavior rapidly in accordance with changing needs. This opened a fast lane of cultural evolution, bypassing the traffic jams of genetic evolution. …Homo sapiens soon far outstripped all other human and animal specials in its ability to cooperate.
 
-## The Agricultural Revolution
+#### The Agricultural Revolution
 
 - The Agricultural Revolution certainly enlarged the sum total of food at the disposal of humankind, but the extra food did not translate into a better diet or more leisure. Rather, it translated into population explosions and pampered elites. The average farmer worked harder than the average forager, and got a worse diet in return. 
 - Worldwide, wheat covers about 87,000 square miles of the globe’s surface, almost ten times the size of Britain.
@@ -47,7 +47,7 @@ Three important revolutions shaped the course of history: *the Cognitive Revolut
 - In order to change an imagined order, we must first believe in an alternative imagined order.
 - Writing was born as the maidservant of human consciousness, but is increasingly becoming its master. Our computers have trouble understanding how Homo sapiens talk, feels and dreams. So we are teaching Homo sapiens to talk, feel and dream in the language of  numbers, which can be understood by computers.
 
-## The Unification of Humankind
+#### The Unification of Humankind
 
 - Ever since the French Revolution, people throughout the world have gradually come to see both equality and individual freedom as fundamental values. Yet the two values contradict each other. Equality can be ensured only by curtailing the freedoms of those who are better off. Guaranteeing that every individual will be free to do as he wishes inevitably short-changes equality.
 - Three universal orders whose devotees could for the first time imagine the entire world and the entire human race as a single unit governed by a single set of laws:
@@ -63,7 +63,7 @@ Three important revolutions shaped the course of history: *the Cognitive Revolut
 - Chaotic systems come in two shapes. Level one chaos is chaos that does not react to predictions about it (e.g. weather). Level two chaos is chaos that does reacts to predictions about it, and therefore can never be predicted accurately (e.g. markets).
 - We study history not to know the future but to widen our horizons, to understand that our present situation is neither natural nor inevitable, and that we consequently have many more possibilities before us than we imagine.
 
-## The Scientific Revolution
+#### The Scientific Revolution
 
 - The Scientific Revolution has not been a revolution of knowledge. It has been above all a revolution of ignorance. The great discovery that launched the Scientific Revolution was the discovery that humans do not know the answers to their most important questions.
 - The real test of “knowledge” is not whether it is true, but whether it empowers us. Scientists usually assume that no theory is 100% correct. Consequently, truth is a poor test for knowledge. The real test is utility. A theory that enables us to do new things constitutes knowledge.
