--- a/blog/_posts/2016-02-05-deep-work.md
+++ b/blog/_posts/2016-02-05-deep-work.md
@@ -17,7 +17,7 @@ book_image: "deep-work.jpg"
 - **Deep Work:** Professional activities performed in a state of distraction-free concentration that push your cognitive capabilities to their limit. These efforts create new values, improve your skill, and are hard to replicate.
 - **Shallow Work:** Noncognitively demanding, logistical-style tasks, often performed while distracted. These efforts tend to not create much new value in the world and are easy to replicate.
 
-## Deep Work is valuable, rare and meaningful
+#### Deep Work is valuable, rare and meaningful
 
 - Current economic thinking, as I’ve surveyed, argues that the unprecedented growth and impact of technology are creating a massive restructuring of our economy. In this new economy, three groups will have a particular advantage: those who can work well and creatively with intelligent machines, this who are the best at what they do, and those with access to capital.
 - Two core abilities for thriving in the new economy:
@@ -31,9 +31,9 @@ book_image: "deep-work.jpg"
 - “…concentration so intense that there is no attention left over to think about anything irrelevant, or to worry about problems.”  - Mihaly Csikszentmihalyi
 - “The best moments usually occur when a person’s body or mind is stretched to its limits in a voluntary effort to accomplish something difficult and worthwhile.” - Mihaly Csikszentmihalyi
 
-## Deep Work Rules
+#### Deep Work Rules
 
-### Work Deeply
+##### Work Deeply
 
 - The key to developing a deep work habit is to move beyond good intentions and add routines and rituals to your working life designed to minimize the amount of your limited willpower necessary to transition into and maintain a state of unbroken concentration.
 - **The Monastic Philosophy of Deep Work Scheduling:** attempts to maximize deep efforts by eliminating or radically minimizing shallow obligations. 
@@ -60,21 +60,21 @@ book_image: "deep-work.jpg"
 	- To help maintain a focus on lead measures, put in place “a rhythm of regular and frequent meetings of any team tat won a wildly important goal.”
 - For a novice, somewhere around an hour a day of intense concentration seems to be a limit, while for experts this number can expand to as many as four hours — but rarely more.
 
-### Embrace Boredom
+##### Embrace Boredom
 - People who multitask all the time can’t filter out irrelevancy. The can’t manage a working memory, They’re chronically distracted. They initiate much larger parts of their brain that are irrelevant to the task at hand… they’re pretty much mental wrecks.
 - Instead of scheduling the occasional break from distraction so you can focus, you should instead schedule the occasional break from focus to give in to distraction.
 - Schedule in advance when you’ll  use the Internet, and then avoid it altogether outside these times.
 - Identify a deep task that’s high on you priority list. Estimate how long you’d normally put aside for an obligation of this type, then give yourself a hard deadline that *drastically reduces* this time. Motivate yourself by setting a countdown times on your phone and propping it up where you can’t avoid seeing it as you work.
 - **Productive Meditation:** the goal is to take a period in which you’re occupied physically but not mentally — walking, jogging, driving, showering — and focus your attention on a single well-defined professional problem. As in mindfulness meditation, you must continue to bring your attention back to the problem at hand when it wanders or stalls. 
 
-### Quit Social Media
+##### Quit Social Media
 - **The Any-Benefit Approach to Network Tool Selection:** you’re justified in using a network tool if you can identify any possible benefit to its use, or anything you might possibly miss out on if you don’t use it. 
 - The notion that identifying *some* benefit is sufficient to invest money, time, and attention in a tool is near laughable to people in his trade.
 - **The Craftsman Approach to Tool Selection:** identify the core factors that determine success and happiness in your professional and personal life. Adopt a tool only if its positive impacts on these factors significantly outweigh its negative impacts.
 - Put more thought into your leisure time. In other words, this strategy suggests that when it comes to your relaxation, don’t default to whatever catches your attention at the moment, but instead dedicate some advance thinking to the question of how you want to spend your “day within a day.”
 - …mental faculties are capable of a continuous hard activity; they do not tire like an arm or a leg. All they want is change — not rest, except in sleep.
 
-### Drain the Shallows
+##### Drain the Shallows
 
 - Schedule every minute of your day.
 - We spend much of our day on autopilot — not giving much thought to what we’re doing with our time. This is a problem.
