--- a/blog/_posts/2016-02-05-deep-work.md
+++ b/blog/_posts/2016-02-05-deep-work.md
@@ -19,7 +19,7 @@ book_image: "deep-work.jpg"
 
 #### Deep Work is valuable, rare and meaningful
 
-- Current economic thinking, as I’ve surveyed, argues that the unprecedented growth and impact of technology are creating a massive restructuring of our economy. In this new economy, three groups will have a particular advantage: those who can work well and creatively with intelligent machines, this who are the best at what they do, and those with access to capital.
+- Current economic thinking, as I’ve surveyed, argues that the unprecedented growth and impact of technology are creating a massive restructuring of our economy. In this new economy, three groups will have a particular advantage: those who can work well and creatively with intelligent machines, those who are the best at what they do, and those with access to capital.
 - Two core abilities for thriving in the new economy:
 	1. The ability to quickly master hard things.
 	2. The ability to produce at an elite level, in terms of both quality and speed.
